--- a/BOOTSTRAP/home.html
+++ b/BOOTSTRAP/home.html
@@ -7,9 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
-    <div>
+    <div class="container">
       <h1>Hello, world!</h1>
     </div>
+    <div class="container mt-2">
+      <button type="button" class="btn btn-primary">Primary</button>
+      <button type="button" class="btn btn-primary btn-lg">Primary</button>
+      <button type="button" class="btn btn-primary" disabled>Primary</button>
+      <button type="button" class="btn btn-secondary">Primary</button>
+      <button type="button" class="btn btn-warning">Primary</button>
+      <button type="button" class="btn btn-warning">Primary</button>
+    </div> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
