--- a/BOOTSTRAP/home.html
+++ b/BOOTSTRAP/home.html
@@ -18,6 +18,18 @@
       <button type="button" class="btn btn-warning">Primary</button>
       <button type="button" class="btn btn-warning">Primary</button>
     </div> 
+    <div class="container mt-3">
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown">
+          Dropdown button
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#" class="dropdown-item">Do something 1</a></li>
+          <li><a href="#" class="dropdown-item">Do something 2</a></li>
+          <li><a href="#" class="dropdown-item">Do something 3</a></li>
+        </ul>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
