--- a/BOOTSTRAP/home.html
+++ b/BOOTSTRAP/home.html
@@ -30,6 +30,15 @@
         </ul>
       </div>
     </div>
+    <div class="card">
+      <h5 class="card-header">Featured Post</h5>
+      <div class="card-body">
+        <h5 class="card-title">Create post</h5>
+        <p class="card-textInfo about the post"></p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+      <div class="card-footer text-muted">1 day ago</div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
