--- a/BOOTSTRAP/home.html
+++ b/BOOTSTRAP/home.html
@@ -51,6 +51,13 @@
       Are you sure
       <a href="#" class="alert-link">you want to delete your account</a>
     </div>
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+    <button class="btn btn-primary" type="button" disabled>
+      <span class="spinner-border spinner-border-sm"></span>
+      Loading...
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
