--- a/BOOTSTRAP/home.html
+++ b/BOOTSTRAP/home.html
@@ -57,6 +57,16 @@
     <button class="btn btn-primary" type="button" disabled>
       <span class="spinner-border spinner-border-sm"></span>
       Loading...
+    </button>
+    <div class="container m-5">
+      <div class="progress">
+        <div
+          class="progress-bar progress-bar-striped progress-bar-animated"
+          style="width: 75%"
+        >
+          75%
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
