--- a/BOOTSTRAP/home.html
+++ b/BOOTSTRAP/home.html
@@ -68,6 +68,20 @@
         </div>
       </div>
     </div>
+    <div class="container mt-3">
+      <button
+        class="btn btn-primary"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapseExample"
+      >
+        Click here
+      </button>
+
+      <div class="collapse" id="collapseExample">
+        Hide comments until button is pressed
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
