--- a/BOOTSTRAP/home.html
+++ b/BOOTSTRAP/home.html
@@ -127,6 +127,13 @@
         </div>
       </div>
     </nav>
+
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col-lg-12 col">text 1</div>
+        <div class="col">text 2</div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
