feat: Hide and Show Screen Size

--- a/BOOTSTRAP/home.html
+++ b/BOOTSTRAP/home.html
@@ -165,6 +165,14 @@
           </div>
         </div>
       </div>
+
+      <div class="container mt-3">
+        <div class="d-none d-md-block">
+          this text is hiden on small screens but visible on medium screens and
+          up
+        </div>
+        <div class="d-md-none d-block">blah</div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
